maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:27: error: not found: value pastDirection
  pastDirection=getDirection
  ^Escaper:30: error: not found: value pastDirection
    setDirection(pastDirection)
                 ^